syntax = "proto3";

package users;

option go_package = "/users";

message User{
  int32 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  bool isAdmin = 5;
}

message UserRequest{
  User userEntry = 1;
}

message UserResponse{
  string result = 1;
}

message JWTRequest{
  string token = 1;
}
message  JWTResponse{
  bool result = 1;
}

service UserService{
  rpc Register(UserRequest) returns (UserResponse);
  rpc Login(UserRequest) returns (UserResponse);
  rpc VerifyJWT(JWTRequest) returns (JWTResponse);
}